[gd_scene load_steps=5 format=3 uid="uid://dbh53qagvuh3b"]

[ext_resource type="Script" path="res://game/ui/ui.gd" id="1_enysq"]
[ext_resource type="PackedScene" uid="uid://chbne0ave634y" path="res://game/ui/song_tree.tscn" id="1_vrjsi"]
[ext_resource type="StyleBox" uid="uid://q0hxohlv06l0" path="res://game/ui/panel_style.tres" id="2_e35f4"]
[ext_resource type="PackedScene" uid="uid://ban51unfcbq73" path="res://game/ui/intensity_ui.tscn" id="4_2k06x"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enysq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.258824, 0.0156863, 0.301961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SongSelection" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_e35f4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/SongSelection"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Tree" parent="MarginContainer/HBoxContainer/SongSelection/MarginContainer" instance=ExtResource("1_vrjsi")]
layout_mode = 2
focus_mode = 0

[node name="Controls" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_e35f4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="IntensityUI" parent="MarginContainer/HBoxContainer/Controls/MarginContainer" instance=ExtResource("4_2k06x")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="song_selected" from="MarginContainer/HBoxContainer/SongSelection/MarginContainer/Tree" to="." method="_on_tree_song_selected"]
[connection signal="intensity_changed" from="MarginContainer/HBoxContainer/Controls/MarginContainer/IntensityUI" to="." method="_on_intensity_ui_intensity_changed"]
